<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.preference.Preference
    android:key="@string/whats_new_preference_button"
    android:title="@string/whats_new_preference_title" />

  <androidx.preference.ListPreference
    android:defaultValue="@string/preference_theme_default"
    android:entries="@array/preference_theme_list_titles"
    android:entryValues="@array/preference_theme_list_values"
    android:key="@string/preference_theme"
    android:negativeButtonText="@string/preference_theme_negative"
    android:title="@string/preference_theme_title" />

  <androidx.preference.PreferenceScreen
    android:key="@string/first_preference_screen"
    android:title="Starting Screen">

    <androidx.preference.ListPreference
      android:defaultValue="1"
      android:entries="@array/preference_starting_location_list_titles"
      android:entryValues="@array/preference_starting_location_list_values"
      android:key="@string/preference_starting_location"
      android:negativeButtonText="@string/preference_starting_location_negative"
      android:title="@string/preference_starting_location_title" />

  </androidx.preference.PreferenceScreen>

  <androidx.preference.Preference
    android:title="Experiments"
    android:key="@string/experiments_preference_button" />

</androidx.preference.PreferenceScreen>
